# MachineLearning_A-Z

./: .gitignore  README.md  pyproject.toml
Classification/: decision_tree_classification.ipynb  k_nearest_neighbors.ipynb  kernel_svm.ipynb  logistic_regression.ipynb  naive_bayes.ipynb  random_forest_classification.ipynb  support_vector_machine.ipynb
Regression/: decision_tree_regression.ipynb  multiple_linear_regression.ipynb  polynomial_regression.ipynb  random_forest_regression.ipynb  support_vector_regression.ipynb
Section 10 - Logistic Regression/: logistic_regression.ipynb
Section 11 - K-Nearest Neighbors (K-NN)/: k_nearest_neighbors.ipynb
Section 12 - Support Vector Machine (SVM)/: support_vector_machine.ipynb
Section 13 - Kernel SVM/: kernel_svm.ipynb
Section 14 - Naive Bayes/: naive_bayes.ipynb
Section 15 - Decision Tree Classification/: decision_tree_classification.ipynb
Section 16 - Random Forest Classification/: random_forest_classification.ipynb
Section 17 - K-Means Clustering/: k_means_clustering.ipynb
Section 18 - Hierarchical Clustering/: hierarchical_clustering.ipynb
Section 19 - Apriori/: apriori.ipynb
Section 20 - Eclat/: eclat.ipynb
Section 21 - Upper Confidence Bound (UCB)/: upper_confidence_bound.ipynb
Section 22 - Thompson Sampling/: thompson_sampling.ipynb
Section 23 - Natural Language Processing/: natural_language_processing.ipynb
Section 24 - Artificial Neural Networks (ANN)/: artificial_neural_network.ipynb
Section 25 - Convolutional Neural Networks (CNN)/: convolutional_neural_network.ipynb
(+14 files in other folders)
