[tool.poetry]
name = "machinelearning-a-z"
version = "0.1.0"
description = ""
authors = ["knop-k <knop.krzysiek@gmail.com>"]
readme = "README.md"
packages = [{include = "machinelearning_a_z"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
