[tool.poetry]
name = "machinelearning-a-z"
version = "0.1.0"
description = ""
authors = ["knop-k <knop.krzysiek@gmail.com>"]
readme = "README.md"
packages = [{include = "machinelearning_a_z"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
apyori = "^1.1.2"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
